--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
     </div>
 
     <!-- Container für das Linien-Diagramm -->
-    <div>
+    <!--<div>
     <canvas id="vorhersageDiagramm"></canvas>
-    </div>
+    </div>-->
 
     
 
