--- a/popup.html
+++ b/popup.html
@@ -31,16 +31,18 @@
     <h3>Geschätzte Belegung</h3>
 
         <div id="dropDownWochentag">
-            <select id="wochentagSelect">
-                <option value="montag">Montag</option>
-                <option value="dienstag">Dienstag</option>
-                <option value="mittwoch">Mittwoch</option>
-                <option value="donnerstag">Donnerstag</option>
-                <option value="freitag">Freitag</option>
-                <option value="samstag">Samstag</option>
-                <option value="sonntag">Sonntag</option>
+            <select id="wochentagAuswahl">
+                <option value="0">Sonntag</option>
+                <option value="1">Montag</option>
+                <option value="2">Dienstag</option>
+                <option value="3">Mittwoch</option>
+                <option value="4">Donnerstag</option>
+                <option value="5">Freitag</option>
+                <option value="6">Samstag</option>
             </select>
         </div>
+
+        
 
     <div>
     <canvas id="vorhersageDiagramm"></canvas>
